# autocover

./: .gitignore  Cargo.toml  channeltoip.txt  cnn.onnx  cnn.pth  cnn.py  cnnoutput.onnx  cnnrnn.py  main.py  newfile.txt  todetect.txt
src/: collect.rs  getimagesfromstream.rs  main.rs  other.rs  predict.rs
src/tchclassifier/: mod.rs
