[package]
name = "autocover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


ctrlc = "*"

rand = "*"

image = "0.24.5"

serde = "1.0.130"
serde_json = "1.0.64"

#onnxruntime = "0.0.14"

ndarray = "*"

tract-onnx = "0.18.5"


tch = "*"

anyhow = "*"

ordered-float = "3.4.0"